css/civicrm.css
/* ... */
#crm-container .pcp-honor_roll-nickname {
  font-weight: bold;
}

#crm-container .pcp-donate {
  height: 24px;
}
#crm-container a.pcp-contribute-button {
  font-weight: bold;
}

#crm-container .pcp-create-your-own {
  clear: left;
  margin: 1em 0;
}

#crm-container .pcp-page-text {
  margin-bottom: 1em;
}

#crm-container table.nestedSelector {
  margin: 0px;
  width: 100%;
  border-bottom: 0px;
}

#crm-container table.nestedSelector tr.columnheader th {
  border: 0px;
}

#crm-container table.caseSelector {
  vertical-align: top;
  border: 0px;
  margin: 0.5em 0.1em;
}

#crm-container table.caseSelector tr {
  border-bottom: 1px solid #999999;
}

#crm-container table.caseSelector td.status-urgent {
  font-weight: bold;
  text-transform: uppercase;
}

#crm-container table.caseSelector td {
  border-right: 0px;
  padding: 4px;
}

#crm-container table.nestedActivitySelector {
  margin: 0px;
  width: 100%;
  border: 0px;
  color: #333333;
}

#crm-container table.nestedActivitySelector tr.columnheader th {
  color: #000000;
  background-color: #CFCEC3;
  border-top-color: #FFF;
  border-left-color: #FFFFFF;
  border-right-color: #FFFFFF;
  border-bottom-color: #999999;
}

#crm-container table#activities-selector.nestedActivitySelector,
#crm-container table#activities-selector.nestedActivitySelector td {
  border: 0px;
}

#crm-container table.nestedActivitySelector td {
  border-right: 0px;
}

#crm-container table#activities-selector.nestedActivitySelector tr.status-overdue {

}

#crm-container table.nestedActivitySelector tr.priority-urgent,
#crm-container table.nestedActivitySelector tr a.priority-urgent {
  background-color: #FFDDDD;
}

#crm-container table.nestedActivitySelector tr.priority-low,
#crm-container table.nestedActivitySelector tr a.priority-low {
  background-color: #DDFFDD;
}

#crm-container table.nestedActivitySelector tr.status-scheduled,
#crm-container table.nestedActivitySelector tr a.status-scheduled {
  color: #006633;
}

#crm-container table.nestedActivitySelector tr.status-completed,
#crm-container table.nestedActivitySelector tr a.status-completed {
  color: #333333;
}

#crm-container table.nestedActivitySelector tr.status-overdue,
#crm-container table.nestedActivitySelector tr a.status-overdue {
  color: #FF0000;
}

#crm-container table.nestedActivitySelector tr a.crm-activity-status {
  cursor: pointer;
}

#crm-container table.nestedActivitySelector tr a {
  color: #0066CC;
}

#crm-container #activities-selector tr:hover td,
#crm-container #activities-selector tr:hover td.sorted,
#crm-container #activities-selector tr.trOver td.sorted,
#crm-container #activities-selector tr.trOver td {
  background: transparent;
}

#crm-container span.success-status {
  margin-left: 6px;
  background-color: #ffff99;
  padding: .25em .5em .25em .5em;
  border: 1px solid #696969;
}

/* Styles for Config Task List */
#crm-container td.tasklist a {
  font-weight: bold;
}

#crm-container table.selector td.tasklist {
  border-right: 1px solid #DDDDDD;
  width: 20%;
}

#crm-container td.tasklist a:link {
  color: #FF0105;
}

#crm-container td.tasklist a:visited {
  color: green;
}

/* Styles for Actions Ribbon */
#crm-container .crm-actions-ribbon {
  margin: 0 0 8px 0;
}

#crm-container .crm-actions-ribbon ul {
  margin: 0px;
  padding: 0px;
}

#crm-container .crm-actions-ribbon li {
  float: left;
  margin: 0 8px 0 0;
  padding: 0px;
  list-style: none;
}

#crm-container .crm-actions-ribbon li.crm-delete-action {
  margin-left: 30px;
}

#crm-container .crm-actions-ribbon li.crm-previous-action,
#crm-container .crm-actions-ribbon li.crm-next-action {
  float: right;
  margin: 0px 0px 0px 8px;
}

#crm-container .ac_results li {
  float: none;
  padding: 4px;
  margin: 0px;
  line-height: 15px;
}

.crm-container .action-item-wrap {
  padding: 0px 5px;
  border-left: 1px solid #CCC;
  white-space: normal;
}

/* Hover-buttons */
.crm-container span.crm-hover-button,
.crm-container a.crm-hover-button {
  display: inline-block;
  white-space: nowrap;
  border: 1px solid transparent;
  text-decoration: none;
  font-size: .8em;
  color: #000;
  padding: 1px 2px 1px 0;
  opacity: .7;
}
.crm-container a.crm-hover-button.action-item,
.crm-container .crm-hover-button.btn-slide {
  font-size: .9em;
  padding: 3px 5px;
  opacity: 1;
}
.crm-container .crm-accordion-header .crm-hover-button {
  opacity: 1;
  position: relative;
  top: -4px;
}
.crm-container .crm-hover-button:hover,
.crm-container a.crm-hover-button:hover,
.crm-container a.crm-hover-button:active {
  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #eee), color-stop(1, #ccc));
  background-image: -webkit-linear-gradient(center bottom, #eee 0%, #ccc 100%);
  background-image: -moz-linear-gradient(center bottom, #eee 0%, #ccc 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = '#cccccc', endColorstr = '#eeeeee', GradientType = 0);
  background-image: linear-gradient(top, #eee 0%, #ccc 100%);
  border: 1px solid #AAAAAA;
  border-radius: 4px;
  opacity: 1;
  color: #2786C2;
}
.crm-container .crm-hover-button .icon {
  margin-left: 3px;
  position: relative;
  top: 2px;
}
.crm-container .crm-hover-button:hover .icon,
.crm-container .crm-hover-button:active .icon {
  background-image: url("../i/icons/jquery-ui-2786C2.png");
}

/* theming for panel and context menus */
.crm-container td ul.panel li {
  background-color: #2F2F2E;
}

.crm-container .panel li a {
  color: #DFDFDF;
}

.crm-container .panel li a:hover,
.crm-container .crm-participant-list-inner li a:hover,
.crm-container .crm-event-links-list-inner li a:hover,
.crm-container .crm-contribpage-links-list-inner li a:hover {
  color: #3e3e3e;
  background-color: #F5F6F1;
  text-decoration: none;
}
/* ... */

